# plex-audio-btop-tui

./: .gitignore  CMakeLists.txt  Makefile.main  PROJECT.md  README.md  audio_decoder.cpp  audio_decoder.h  build.sh  config.cpp  config.example.ini  input.cpp  input.h  main.cpp  player_view.cpp  player_view.h  plex_client.cpp  plex_client.h  plex_xml.cpp  plex_xml.h  terminal.cpp  terminal.h  types.h  waveform.cpp  waveform.h
